# csv-splitter

./: .env  .gitignore  Cargo.toml  LICENSE.MD  README.MD
src/: main.rs
src/loaders/: file_loader.rs  file_writer.rs  mod.rs
src/parsers/: file_parser.rs  mod.rs  parameter_parser.rs
src/queue/: connector.rs  mod.rs  queue_writer.rs
