[package]
name = "csv-splitter"
description = "Splits CSV files into parts based on provided chunk size (in lines). Capable of batch splitting, but it doesn't differentiate between files yet during output."
license = "MIT"
authors = ["patterns-complexity"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/patterns-complexity/csv-splitter.git"

[dependencies]
args = "2.2.0"
dotenv = "0.15.0"
getopts = "0.2.21"
