[package]
name = "csv-splitter"
description = "Splits CSV files into parts based on provided chunk size (in lines). Capable of batch splitting, but it doesn't differentiate between files yet during output."
license = "MIT"
authors = ["patterns-complexity"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/patterns-complexity/csv-splitter.git"

[dependencies]
args = "2.2.0"
chardet = "0.2.4"
dotenv = "0.15.0"
encoding_rs = "0.8.33"
getopts = "0.2.21"
