[package]
name = "csv-splitter"
description = "Splits CSV files into chunks by line count. Supports chunk upload to RabbitMQ."
license = "MIT"
authors = ["patterns-complexity"]
version = "0.2.1"
edition = "2021"
repository = "https://github.com/patterns-complexity/csv-splitter.git"

[dependencies]
args = "2.2.0"
chardet = "0.2.4"
dotenv = "0.15.0"
encoding_rs = "0.8.33"
getopts = "0.2.21"
lapin = "2.3.1"
tokio = { version = "1.32.0", features = ["full"] }
